handle ungrab crossings for FFM & mouse preference

BUG: 142040
REVIEW: 104316